# sample-flask

./: README.md  myapp.ini  pyproject.toml  runserver.py
testapp/: __init__.py  celery_maker.py  route.py  tasks.py
