[tool.poetry]
name = "flask-test"
version = "0.1.0"
description = ""
authors = ["a9b <a9b.word@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
